# FAHRPC

./: .gitignore  DPSETUP.bat  LICENSE  MAIN_SETUP.bat  PROJECT_STRUCTURE.txt  README.md  README.txt  UNINSTALL.bat  config.json  dpscript.ps1  main.py  manifest.in  pyproject.toml  quick_config_guide.txt  quick_start.txt  run_fahrpc.bat  setup.bat  useTheOtherSetup.bat
.github/workflows/: workflow.yml
logdocumentation/: LOGGING_COMPLETE_REFERENCE.md  LOGGING_CONSOLIDATION_NOTES.md  LOGGING_QUICK_COMMANDS.md  LOGGING_START_HERE.md  LOGGING_SYSTEM_OVERVIEW.md
modules/: __init__.py  config.py  discord_rpc.py  hardware.py  logger.py  scraper.py  tray.py
src/fahrpc/: __init__.py  config.py  discord_rpc.py  env_detect.py  hardware.py  logger.py  main.py  scraper.py  tray.py
src/fahrpc/data/: default_config.json
